<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A66E74BA"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TextView"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:text="@string/urzadzenia_domowe"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="20dp"
        android:text="@string/autor_dominik_gabrysz"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="203dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/odkurzacz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/odkurzacz" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="169dp"
        android:layout_height="239dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/pralka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pralka" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pralka"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="164dp"
        android:layout_height="41dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="272dp"
        android:text="@string/odkurzacz"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="24dp"
        android:text="@string/zatwierdz"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="204dp"
        android:text="@string/wlacz"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="Podaj nr prania 1..12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="28dp"
        android:text="Numer prania: nie podano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="143dp"
        android:layout_height="29dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="160dp"
        android:text="Odkurzacz: Włączony"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="116dp"
        android:text="Status: naładowany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>